--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/Helpers/UploadFileHelper.php",
+            "app/Helpers/FileHelper.php",
             "app/Helpers/ResponseHelper.php"
         ]
     },
